fix: increased ul selector specificity to fix missing margin on safari

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -327,7 +327,7 @@ section#randomize-destination p {
   margin-bottom: 8px;
 }
 
-ul#destinations {
+main > ul#destinations {
   margin-top: 24px;
 }
 
